--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "MoneyGuard",
   "version": "1.2.0",
   "private": true,
-  "homepage": "https://lastavchuk.github.io/MoneyGuard/",
+  "homepage": "https://Stepaniuk-Den.github.io/MoneyGuard/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
